mattermost-acme-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: acme-challenge
  namespace: mattermost
spec:
  parentRefs:
  - name: mattermost-gateway
    sectionName: http-listener
  hostnames:
  - "YOUR_DOMAIN"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /.well-known/acme-challenge/
    backendRefs:
    - name: YOUR_SOLVER_SERVICE
      port: 8089
