mattermost-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mattermost-route
  namespace: mattermost
spec:
  parentRefs:
  - name: mattermost-gateway
    sectionName: https-listener
  hostnames:
  - "YOUR_DOMAIN"
  rules:
  - backendRefs:
    - name: mattermost-gateway-svc
      port: 8065
    timeouts:
      request: 600s
